--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>it.skrape</groupId>
         <artifactId>skrapeit-parent</artifactId>
-        <version>0.1.0</version>
+        <version>0.1.2a</version>
     </parent>
 
     <artifactId>skrapeit-core</artifactId>
